implement AI-powered explanation modal, user authentication flows, and personalized feed infrastructure